# Sherman

./: .gitignore  .gitmodules  CLAUDE.md  CURRENT_ENV.sample  env.local.sh  keys  nvim_cheatcheat.md  readme.md  readme.md.old  testfile
ansible/: inventory.ini  readme.md  run
ansible/playbooks/: docker-install.yaml  ping.yaml
archive/: readme.md
archive/c/: cjson_example.c
archive/scratchpad/: reactive.ts
archive/testmake/: Makefile
buildables/: .gitignore  cloned.json  readme.md
buildables/st/: .gitignore  patc.json
cf2/: .gitignore  Makefile  array.h  main.c
configsets/: Makefile  Makefile.anti  Makefile.charm  Makefile.home  Makefile.work
configsets/00-brew/: Brewfile  install.sh
configsets/03-nvm/: install.sh
configsets/05-git/: install.sh
configsets/10-alacritty/: install.sh
configsets/15-emacs/: init.el
configsets/20-linearmouse/: install.sh
configsets/25-neovim/: install.sh
configsets/30-sdkman/: install.sh
configsets/35-wezterm/: .wezterm.lua  install.sh
configsets/40-ghostty/: install.sh
configsets/95-zsh/: .zshrc  install.sh
configsets/alacritty/: alacritty.toml  install.sh
configsets/brew/: Brewfile  Brewfile.lock.json  install.sh
configsets/ghostty/: install.sh
configsets/git/: .gitconfig.home  .gitconfig.work  install.sh
configsets/linearmouse/: install.sh  linearmouse.json
configsets/neovim/: init.lua  install.sh  lazy-lock.json
configsets/nvm/: install.sh
configsets/profiles/: anti.conf  charm.conf  home.conf  work.conf
configsets/sdkman/: install.sh
configsets/vscodium/: install.sh  settings.json
configsets/wezterm/: install.sh
configsets/zsh/: .zshrc  install.sh
configuration/sherman-bot/: foo.c  foo.h  main.c  testeroni
configure/: Cargo.toml  README.md
configure/src/: main.rs
deploy/charm/: .gitignore
deploy/electron/: deploy.sh
deploy/services/: readme.md
notes/: .gitignore  .prettierrc.json  bot-hub.md  sync-notes
notes/.obsidian/: app.json  appearance.json  daily-notes.json  workspace.json
projects/: .gitignore  bak  cloned.json
projects/advent-of-code/: .gitignore  get-input.sh  readme.md  run-fast.sh
projects/advent_of_code/: run.sh  setup.sh
projects/agent-tools/: .gitignore  Cargo.toml  README.md
projects/agent-tools/src/: main.rs
projects/agent-tools/src/commands/browse/: commands.rs  daemon.rs  mod.rs  ollama.rs  workflow.rs
projects/agent-tools/src/common/: daemon.rs
projects/alloc/: config.json  main.rb  readme.md
projects/any/: Cargo.toml  readme.md
projects/anylang3/: example.any  main.rb  readme.md
projects/aptfile/: Cargo.toml  Makefile  (+1 more)
projects/dev-bud/: Cargo.toml
projects/dev-bud/src/: main.rs  utils.rs
projects/dev-bud/src/commands/: create.rs  delete.rs  go.rs  list.rs  mod.rs  open.rs  switch.rs
projects/gb-10k/ui/: Cargo.toml
projects/gb-10k/ui/src/: main.rs
projects/tabs/: .env.example  .gitignore  Cargo.toml  README.md
projects/tabs/migrations/: 202602220001_create_users.sql  202602220001_init_notes.sql  202602220002_create_sessions.sql
projects/tabs/src/: main.rs
projects/tabs/static/: site.css
projects/tabs/templates/: base.html  index.html  login.html  register.html
sherman-bot/: c_file_utils  foo.c  foo.h  main.c  readme.md  testfile
(+1136 files in other folders)
