[package]
name = "agent-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Chromium automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# IPC for daemon communication
tokio-serde = { version = "0.9", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System
libc = "0.2"

# Time utilities
chrono = "0.4"

# URL parsing
url = "2.5"

# Base64 encoding/decoding
base64 = "0.22"

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
