[package]
name = "dev-bud"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-openai = "0.28.3"
clap = { version = "4.5.40", features = ["derive"] }
diffy = "0.4.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
