[package]
name = "tabs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
argon2 = "0.5"
base64 = "0.22"
http = "1"
minijinja = { version = "2", features = ["loader"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
